--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,10 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-  <link rel="icon" sizes="32x32" href="favicon-32x32.png">
-  <link rel="icon" sizes="16x16" href="favicon-16x16.png">
+    <link rel="icon" sizes="16x16" href="assets/favicon-16x16.png" type="image/x-icon" />
+    <link rel="icon" sizes="32x32" href="assets/favicon-32x32.png" type="image/x-icon" />
+
+
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
